--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -54,7 +54,7 @@ body:
     id: environment
     attributes:
       label: Environment
-      description: Which version of Operating System, Associated Runtime and project are you using?
+      description: Which version of Operating System, Associated Runtime and Project are you using?
       placeholder: |
         - OS: ...
         - Python/Node: ...
@@ -67,6 +67,6 @@ body:
     id: additional-information
     attributes:
       label: Additional Information
-      description: | 
+      description: >
         There You can show any additional information such as logs, screenshots,
         scenarios in which the bug occurs so that it facilitates resolving the issue.
