--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: 🤔 Ask a Question (from .github repo)
+    url: /discussions/new?category=q-a
     about: Ask a question about how to use pydantic using github discussions
