--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
-  - name: 🤔 Ask a Question (from .github repo)
+  - name: 🤔 Ask a Question (go to Discussions manually as a workaround for now)
     url: https://github.com/somespecialone/<repo>/discussions/new?category=q-a
-    about: Ask a question about how to use pydantic using github discussions
+    about: Ask a question about project using GitHub Discussions
